<resources>
    <string name="app_name">CarStat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CarStats</string>
    <string name="nav_header_subtitle">tu este nieco dam</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_refuelling">Tankovanie</string>
    <string name="menu_maintainance">Údržba</string>
    <string name="menu_inspection">STK</string>
    <string name="menu_repairs">Opravy</string>
    <string name="menu_trips">Jazdy</string>
    <string name="menu_stats">Štatistiky</string>
    <string name="menu_settings">Nastavenia</string>
    <string-array name="fuel_type">
        <item>Natural 95</item>
        <item>Natural 98</item>
        <item>Natural 100</item>
        <item>Natural 101</item>
        <item>Natural 102</item>
        <item>Elektrika</item>
        <item>Diesel</item>
        <item>Ad Blue</item>
        <item>LPG</item>
        <item>CNG</item>
        <item>iné</item>
    </string-array>
    <string-array name="insp_type">
        <item>Technická kontrola</item>
        <item>Emisná kontrola</item>
        <item>Kontrola Originality</item>
    </string-array>
    <string-array name="maint_type">
        <item>Výmena oleja a filtrov</item>
        <item>Prezúvanie pneumatík</item>
        <item>Výmena kvapalín</item>
        <item>Záručná prehliadka</item>
        <item>iné</item>
    </string-array>
    <string-array name="stat_type">
        <item>Všeobecné</item>
        <item>Tankovanie</item>
        <item>Údržba</item>
        <item>STK</item>
        <item>Opravy</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="tripRoute">A - B</string>
    <string name="hint0_00">0.00</string>
    <string name="hint0">0</string>
    <string name="hintdd_mm_yyyy">DD.MM.YYYY</string>
    <string name="checkSuccess">Úspešná</string>
    <string name="hintStationName">Názov Stanice</string>
    <string name="inspType">Typ Kontroly</string>
    <string name="price">Zaplatená suma</string>
    <string name="odo">Stav Odometra</string>
    <string name="date">Dátum</string>
    <string name="success">Úspešnosť</string>
    <string name="inspStation">Stanica TK</string>
    <string name="save">Uložiť</string>
    <string name="inspList">Vypíš zoznam STK</string>
    <string name="serviceName">Názov Servisu</string>
    <string name="maintType">Typ Údržby</string>
    <string name="notes">Poznámky</string>
    <string name="service">Servis</string>
    <string name="maintList">Vypíš údržby</string>
    <string name="space" />
    <string name="fuelStation">Čerpacia stanica</string>
    <string name="litres">Natankované litre</string>
    <string name="fuelType">Typ paliva</string>
    <string name="refuelPlace">Miesto tankovania</string>
    <string name="refuelList">Vypíš zoznam tankovaní</string>
    <string name="hintBrand">napr. Ford</string>
    <string name="brand">Značka</string>
    <string name="hintModel">napr. Focus ST170</string>
    <string name="model">Model</string>
    <string name="deleteAll">Zmazať všetky dáta</string>
    <string name="refuelling">Tankovanie</string>
    <string name="maintainance">Údržba</string>
    <string name="inspection">STK</string>
    <string name="repairs">Opravy</string>
    <string name="general">Všeobecné</string>
    <string name="route">Trasa</string>
    <string name="odoStart">Stav Odoometra na začiatku</string>
    <string name="odoEnd">Stav Odometra na konci</string>
    <string name="tripList">Vypíš zoznam jázd</string>
    <string name="hintRepair">napr. Rozbité sklo</string>
    <string name="repairType">Typ Opravy</string>
    <string name="repairList">Vypíš zoznam opráv</string>
</resources>