<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_refuel"
            android:icon="@drawable/ic_menu_gasstation"
            android:title="@string/menu_refuelling" />
        <item
            android:id="@+id/nav_maint"
            android:icon="@drawable/ic_menu_udrzba"
            android:title="@string/menu_maintainance" />
        <item
            android:id="@+id/nav_insp"
            android:icon="@drawable/ic_menu_stk"
            android:title="@string/menu_inspection" />
        <item
            android:id="@+id/nav_repairs"
            android:icon="@drawable/ic_menu_oprava"
            android:title="@string/menu_repairs" />
        <item
            android:id="@+id/nav_trips"
            android:icon="@drawable/ic_menu_car"
            android:title="@string/menu_trips" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_menu_stats"
            android:title="@string/menu_stats" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>